--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div style="display: flex; gap: 16px; justify-content: center; flex-wrap: wrap;">
             <a href="permission-management.html" class="nav-button">进入权限管理</a>
             <a href="resource-management.html" class="nav-button">进入资源管理</a>
+            <a href="user-permission-management.html" class="nav-button">用户-权限配置</a>
         </div>
     </div>
 </body>
