--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
             <a href="permission-management.html" class="nav-button">进入权限管理</a>
             <a href="resource-management.html" class="nav-button">进入资源管理</a>
             <a href="user-permission-management.html" class="nav-button">用户-权限配置</a>
+            <a href="user-resource-management.html" class="nav-button">用户-资源配置</a>
+
         </div>
     </div>
 </body>
